--- a/kibot/outputs-foreach-variant.yaml
+++ b/kibot/outputs-foreach-variant.yaml
@@ -46,5 +46,7 @@ outputs:
     view: bottom
 - name: basic_step
   comment: 3D model in STEP format
-  type: step
+  type: export_3d
   dir: 3D
+  options:
+    format: step
