Only try installing zip when not installed yet
This is slightly faster, but also works around a current issue where apt
is broken in the kibot container.

--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -195,7 +195,9 @@ jobs:
         if: env.IS_TAG_PUSH == 'true'
         working-directory: ${{ env.OUT_DIR}}
         run: |
-          apt update && apt install zip
+          if ! command -v zip; then
+            apt update && apt install zip
+          fi
           for f in *; do
             if [ -d "$f" ]; then
               zip -r "$f.zip" "$f"
