Set explicit permissions in workflow file
This allows operation with repositories where the default permissions
are read-only. By specifying explicit permissions, the workflow runs
with raised permissions.

--- a/examples/workflow.yml
+++ b/examples/workflow.yml
@@ -17,3 +17,6 @@ jobs:
       contents: write
     uses: matthijskooijman/PCB-workflows/.github/workflows/dispatcher.yml@dev
     secrets: inherit
+    permissions:
+      # Allow write access to create a release
+      contents: write
